# riskratchet

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .riskratchet.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  action.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: baseline-gate.yml  ci.yml  dogfood-action.yml  publish.yml  regenerate-baseline.yml  release-check.yml  security.yml
data/calibration/: README.md  ablation.json  corpus.toml  defect-labels.json  defect-prediction-findings.md  defect-prediction-table.md  defect-prediction.json  maintainability-proneness-findings.md  pr-labels.toml  pr-replay-rollup.json  proneness-ablation.json  repro-verification.json  sprawl-candidates.json  sprawl-experiment.json
data/calibration/repos/arrow/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/arviz/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/attrs/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/babel/: repo.toml
data/calibration/repos/bayesian-optimization/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/boltons/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/cassandra-python-driver/: repo.toml
data/calibration/repos/category-encoders/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/cattrs/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/click/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/croniter/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/dateutil/: repo.toml
data/calibration/repos/deepdiff/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/emcee/: repo.toml
data/calibration/repos/fastapi/: repo.toml
data/calibration/repos/feature-engine/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/featuretools/: repo.toml
data/calibration/repos/flask/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/formulaic/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/httpx/: repo.toml
data/calibration/repos/hyperopt/: repo.toml
data/calibration/repos/imbalanced-learn/: repo.toml
data/calibration/repos/jinja2/: repo.toml
data/calibration/repos/jsonschema/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
data/calibration/repos/lifelines/: change-proneness-labels.json  defect-labels.json  defect-prediction.json  repo.toml
docs/: ide-integration.md  language-backend-contract.md  research-case.md  sprawl-component-finding.md  threat-model.md  top-risk.json  top-risk.md  typescript-parser-decision.md
schemas/: baseline.schema.json  config.schema.json  debug.schema.json  diff.schema.json  doctor.schema.json  explain.schema.json  regressions.schema.json  report.schema.json  summary.schema.json
src/riskratchet/: __init__.py  _demo_bad_function.py  _paths.py  _version.py  analysis.py  auto_coverage.py  baseline.py  cli.py  complexity.py  config.py  coverage.py  diagnostics.py  doctor.py  engine.py  git.py  groups.py  init.py  matching.py  models.py  pytest_plugin.py  redaction.py  reporting.py  scoring.py  typescript.py  typescript_complexity.py  typescript_coverage.py  typescript_exports.py  typescript_identity.py
src/riskratchet/baseline/: __init__.py  classify.py  compare.py  diff.py  io.py  regressions.py
src/riskratchet/reporting/: __init__.py  annotations.py  json_payload.py  markdown.py  sarif.py  summary.py  text.py
tests/: conftest.py  reporting_fixtures.py  test_action_yaml.py  test_analysis.py  test_auto_coverage.py  test_backend_protocol.py  test_baseline.py  test_baseline_layering.py  test_baseline_rationale.py  test_calibration_ablation.py  test_calibration_change_counting.py  test_calibration_config.py  test_calibration_coverage_free.py  test_calibration_coverage_replay.py  test_calibration_defects_cli.py  test_calibration_defects_tracking.py  test_calibration_fixes.py  test_calibration_git_checkout.py  test_calibration_harness.py  test_calibration_predict.py  test_calibration_proneness.py  test_calibration_proneness_model.py  test_calibration_replay.py  test_calibration_rescore.py  test_calibration_review_comments.py  test_calibration_stats.py  test_calibration_szz.py  test_calibration_szz_hunks.py  test_check_fail_above.py  test_cli.py  test_cli_helpers.py  test_cli_snapshots.py  test_complexity.py  test_config.py  test_coverage.py  test_diagnostics.py  test_diff.py  test_doctor.py  test_dogfood_top_risk.py  test_engine.py  (+29 more)
tests/__snapshots__/: test_cli_snapshots.ambr  test_diff.ambr  test_doctor.ambr  test_reporting_snapshots.ambr  test_scan_next_step_footer.ambr
tests/fixtures/agent_generated_spaghetti/: coverage.json
tests/fixtures/all_exports_focused/: coverage.json
tests/fixtures/complex_uncovered/: coverage.json
tests/fixtures/covered_but_branchy/: coverage.json
tests/fixtures/large_file_sprawl/: coverage.json
tests/fixtures/monorepo/: coverage-alpha.json  coverage-beta.json  pyproject.toml
tests/fixtures/public_api_regression/: baseline.json  coverage.json
tests/fixtures/simple_clean/: coverage.json
tests/fixtures/typescript/: README.md  abstract.ts  anonymous_default.ts  arrows.ts  async_variants.ts  broken.ts  complexity_cases.ts  components.tsx  default_export.ts  generated.pb.ts  internal_class.ts  methods.ts  mts_module.mts  namespaces.ts  reexport.ts  top_level.ts
(+99 files in other folders)
